feat: import QGIS projects into site map packages
